--- a/static/css/stats.css
+++ b/static/css/stats.css
@@ -8,10 +8,11 @@
 
 .stats_outer_container {
   display: grid;
-  margin-top: 100px;
+  margin-top: 75px;
   width: 100%;
   max-width: 1000px;
   gap: 25px;
+  padding: 25px;
 }
 
 .stats_inner_container {
@@ -34,8 +35,12 @@
   width: 100%;
   border-radius: 15px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+}
+
+.title h1 {
+  width: 100px;
 }
 
 .stats_info_container {
@@ -83,7 +88,7 @@
   background-color: rgb(50, 50, 50);
   border-radius: 8px;
   padding: 10px;
-  width: 55%;
+  width: 545px;
   box-shadow: 0px 6px 16px 0px rgb(0 0 0 / 40%);
 }
 
@@ -302,4 +307,103 @@ select:-webkit-autofill:focus {
 
 .content_count:hover .average_size {
   opacity: 1;
+}
+
+/* add drive transition effect */
+.form_container {
+  overflow: hidden;
+}
+
+.form_inner {
+  position: absolute;
+  left: 600px;
+  top: 10px;
+  font-weight: 900;
+  color: rgb(90, 90, 90);
+  font-size: 20px;
+}
+
+.form_inner h2 {
+  position: absolute;
+  top: -195px;
+  left: 85px;
+}
+
+form {
+  left: 15px;
+  position: absolute;
+  transition: left 300ms ease-in-out;
+}
+
+.add-drive-move {
+  left: -490px;
+}
+
+.form_list_title {
+  position: absolute;
+  top: -190px;
+  left: 200px;
+}
+
+/* tab switcher */
+
+.arrow {
+  fill: white;
+  font-size: 40px;
+  margin: 0 25px 0 25px;
+  transition: fill 50ms ease-in-out;
+}
+
+.arrow-right {
+  float: right;
+}
+
+.title_container:hover .clickable-arrow-region.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.clickable-arrow-region.active:active .arrow {
+  fill: rgb(185, 185, 185);
+}
+
+.clickable-arrow-region {
+  width: 100%;
+  padding: 15px;
+  opacity: 0;
+  pointer-events: none;
+  cursor: pointer;
+  transition: opacity 200ms ease-in-out;
+}
+
+.stats_inner_container {
+  position: relative;
+  left: 0;
+  transition: left 500ms ease-in-out;
+}
+
+.show-length-container {
+  background-color: rgb(50, 50, 50);
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0px 6px 16px 0px rgb(0 0 0 / 40%);
+  position: absolute;
+  left: 190vh;
+  width: 98%;
+  height: 100%;
+}
+
+.go-to-show-lengths {
+  left: -190vh;
+}
+
+.show-length {
+  background-color: rgb(40, 40, 40);
+  border-radius: 15px;
+  width: 100%;
+  height: 100%;
+}
+
+main {
+  overflow: hidden;
 }
