--- a/templates/stats.html
+++ b/templates/stats.html
@@ -32,29 +32,54 @@
                     <div class="stats_info_container">
                         <div class="stats_info_inner">
                             <div class="stats_info top">
-                                <span class="content_count count_toggle">
-                                    <span>Tv-Shows <span class="data">{{ total_tv_shows }}</span></span>
-                                    <span class="average_size average">{{ average_tv_show_size }} GBA</span>
-                                    <span class="average_size median hide">{{ median_tv_shows }} GBM</span>
-                                </span>
-                                <span class="content_count count_toggle">
-                                    <span>Movies <span class="data">{{ total_movies }}</span></span>
-                                    <span class="average_size average">{{ average_movie_size }} GBA</span>
-                                    <span class="average_size median hide">{{ median_movies }} GBM</span>
-                                </span>
-                                <span class="content_count">
-                                    <span>Tv-Shows & Movies <span class="data">{{ total_tv_shows_and_movies }}</span></span>
-                                    <span class="average_size">{{ total_average_size }} GBA</span>
-                                </span>
-                                <span>Unacquired <span class="data">{{ total_unacquired }}</span></span>
+                                <h2>Totals</h2>
+                                <div class="data-inner">
+                                    <span class="content_count count_toggle">
+                                        <span>Tv-Shows <span class="data">{{ counts.tv_shows.count }}</span></span>
+                                        <span class="average_size average">{{ counts.tv_shows.average }} GBA</span>
+                                        <span class="average_size median hide">{{ counts.tv_shows.median }} GBM</span>
+                                    </span>
+                                    <span class="content_count count_toggle">
+                                        <span>Movies <span class="data">{{ counts.movies.count }}</span></span>
+                                        <span class="average_size average">{{ counts.movies.average }} GBA</span>
+                                        <span class="average_size median hide">{{ counts.movies.median }} GBM</span>
+                                    </span>
+                                    <span class="content_count">
+                                        <span>Tv-Shows & Movies <span class="data">{{ counts.movies_tv_shows.count }}</span></span>
+                                        <span class="average_size average">{{ counts.movies_tv_shows.average }} GBA</span>
+                                        <span class="average_size median hide">{{ counts.movies_tv_shows.median }} GBM</span>
+                                    </span>
+                                    <span>Unacquired <span class="data">{{ counts.unacquired.count }}</span></span>
+                                </div>
                             </div>
                         </div>
                         <div class="stats_info_inner">
                             <div class="stats_info bottom">
-                                <span>Seasons <span class="data">{{ total_seasons }}</span></span>
-                                <span>Watched <span class="data">{{ total_watched }}</span></span>
-                                <span>Not Watched <span class="data">{{ total_not_watched }}</span></span>
-                                <span>Size <span class="data">{{ drive_info_total|floatformat:2 }} GB</span></span>
+                                <h2>Totals</h2>
+                                <div class="data-inner">
+                                    <div class="icon-container">
+                                        <span class="watched">
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512">
+                                                <path d="M288 32c-80.8 0-145.5 36.8-192.6 80.6C48.6 156 17.3 208 2.5 243.7c-3.3 7.9-3.3 16.7 0 24.6C17.3 304 48.6 356 95.4 399.4C142.5 443.2 207.2 480 288 480s145.5-36.8 192.6-80.6c46.8-43.5 78.1-95.4 93-131.1c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C433.5 68.8 368.8 32 288 32zM144 256a144 144 0 1 1 288 0 144 144 0 1 1 -288 0zm144-64c0 35.3-28.7 64-64 64c-7.1 0-13.9-1.2-20.3-3.3c-5.5-1.8-11.9 1.6-11.7 7.4c.3 6.9 1.3 13.8 3.2 20.7c13.7 51.2 66.4 81.6 117.6 67.9s81.6-66.4 67.9-117.6c-11.1-41.5-47.8-69.4-88.6-71.1c-5.8-.2-9.2 6.1-7.4 11.7c2.1 6.4 3.3 13.2 3.3 20.3z" />
+                                            </svg>
+                                            <span class="data">{{ totals.watched }}</span>
+                                        </span>
+                                        <span class="not-watched">
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512">
+                                                <path d="M38.8 5.1C28.4-3.1 13.3-1.2 5.1 9.2S-1.2 34.7 9.2 42.9l592 464c10.4 8.2 25.5 6.3 33.7-4.1s6.3-25.5-4.1-33.7L525.6 386.7c39.6-40.6 66.4-86.1 79.9-118.4c3.3-7.9 3.3-16.7 0-24.6c-14.9-35.7-46.2-87.7-93-131.1C465.5 68.8 400.8 32 320 32c-68.2 0-125 26.3-169.3 60.8L38.8 5.1zm151 118.3C226 97.7 269.5 80 320 80c65.2 0 118.8 29.6 159.9 67.7C518.4 183.5 545 226 558.6 256c-12.6 28-36.6 66.8-70.9 100.9l-53.8-42.2c9.1-17.6 14.2-37.5 14.2-58.7c0-70.7-57.3-128-128-128c-32.2 0-61.7 11.9-84.2 31.5l-46.1-36.1zM394.9 284.2l-81.5-63.9c4.2-8.5 6.6-18.2 6.6-28.3c0-5.5-.7-10.9-2-16c.7 0 1.3 0 2 0c44.2 0 80 35.8 80 80c0 9.9-1.8 19.4-5.1 28.2zm9.4 130.3C378.8 425.4 350.7 432 320 432c-65.2 0-118.8-29.6-159.9-67.7C121.6 328.5 95 286 81.4 256c8.3-18.4 21.5-41.5 39.4-64.8L83.1 161.5C60.3 191.2 44 220.8 34.5 243.7c-3.3 7.9-3.3 16.7 0 24.6c14.9 35.7 46.2 87.7 93 131.1C174.5 443.2 239.2 480 320 480c47.8 0 89.9-12.9 126.2-32.5l-41.9-33zM192 256c0 70.7 57.3 128 128 128c13.3 0 26.1-2 38.2-5.8L302 334c-23.5-5.4-43.1-21.2-53.7-42.3l-56.1-44.2c-.2 2.8-.3 5.6-.3 8.5z" />
+                                            </svg>
+                                            <span class="data">{{ totals.not_watched }}</span>
+                                        </span>
+                                        <span class="seasons">
+                                            <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512">
+                                                <path d="M256 0H576c35.3 0 64 28.7 64 64V288c0 35.3-28.7 64-64 64H256c-35.3 0-64-28.7-64-64V64c0-35.3 28.7-64 64-64zM476 106.7C471.5 100 464 96 456 96s-15.5 4-20 10.7l-56 84L362.7 169c-4.6-5.7-11.5-9-18.7-9s-14.2 3.3-18.7 9l-64 80c-5.8 7.2-6.9 17.1-2.9 25.4s12.4 13.6 21.6 13.6h80 48H552c8.9 0 17-4.9 21.2-12.7s3.7-17.3-1.2-24.6l-96-144zM336 96a32 32 0 1 0 -64 0 32 32 0 1 0 64 0zM64 128h96V384v32c0 17.7 14.3 32 32 32H320c17.7 0 32-14.3 32-32V384H512v64c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V192c0-35.3 28.7-64 64-64zm8 64c-8.8 0-16 7.2-16 16v16c0 8.8 7.2 16 16 16H88c8.8 0 16-7.2 16-16V208c0-8.8-7.2-16-16-16H72zm0 104c-8.8 0-16 7.2-16 16v16c0 8.8 7.2 16 16 16H88c8.8 0 16-7.2 16-16V312c0-8.8-7.2-16-16-16H72zm0 104c-8.8 0-16 7.2-16 16v16c0 8.8 7.2 16 16 16H88c8.8 0 16-7.2 16-16V416c0-8.8-7.2-16-16-16H72zm336 16v16c0 8.8 7.2 16 16 16h16c8.8 0 16-7.2 16-16V416c0-8.8-7.2-16-16-16H424c-8.8 0-16 7.2-16 16z" />
+                                            </svg>
+                                            <span class="data">{{ counts.tv_shows.seasons }}</span>
+                                        </span>
+                                    </div>
+                                    <span>Used Space <span class="data">{{ totals.used_space|floatformat:2 }} GB</span></span>
+                                    <span>Available Space <span class="data">{{ totals.available_space|floatformat:2 }} GB</span></span>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -74,12 +99,10 @@
                                 <div class="drives">
                                     {% for drive in drives %}
                                         <div id="drive-{{ drive.id }}" class="drive">
-                                            <span class="drive_info"><span class="drive_name_info">{{ drive.drive_name }} ({{ drive.drive_type }})</span>
-                                            {% for drive_calc in drive_info %}
-                                                {% if drive_calc.drive == drive.drive_path %}{{ drive_calc.size }} GB{% endif %}
-                                            {% endfor %}
+                                            <span class="drive_info"><span class="drive_name_info">{{ drive.name }} {{ drive.path }}</span>
+                                            {{ drive.used_space }} GB
                                         </span>
-                                        <span class="drive_path">{{ drive.drive_path }}</span>
+                                        <span class="drive_path">{{ drive.type }}</span>
                                         <a class="btn-delete" value={{ drive.id }} content-type="drive">
                                             <i class="trash-can-svg">
                                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
