Added support / fixed for adding new seasons to existing shows

--- a/templates/search.html
+++ b/templates/search.html
@@ -12,7 +12,7 @@
     <div class="form_container">
         <form action="">
             <div class="search">
-                <input type="search" placeholder="Search database..."/>
+                <input id="seach-form-input" type="search" placeholder="Search database..."/>
                 <input class="submit_search btn btn-blue" type="submit" value="Search"/>
             </div>
             <div id="select-options">
